2012-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (bin_links) [WIN32]: Skip shell script links.

2011-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Rename the target scripts.tmp into scripts-list
	and make it available independent of maintainer mode.
	* README: Mention 'make scripts-list'.

2011-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: More ${prefix} => $(datarootdir).

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-12-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (uninstall-hook): Only remove man if it is a link.

2011-12-03  Karl Berry  <karl@tug.org>

	* Makefile.am (install-data-hook): only create the man link if it
	is a link already, and if TL_INSTALL_OMIT_MAN_LINK is unset
	in the environment.  Report from Bruce Dubbs, 18 Nov 2011 18:56:22.

2011-09-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (scripts.tmp): List each file on a separate line.

2011-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (install-data-hook): Use new shell script relpath
	to compute relative path for linked scripts, mainly for distros.

2011-07-29  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_dist_other_scripts): add urlbst.

2011-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (bin_links): Move mpost:metafun and mpost:mfplain
	from here to ../../web2c/mplibdir/am/mplib.am, where we also
	install the call_mpost.exe wrapper binary for WIN32/MinGW.

2011-05-28  Karl Berry  <karl@tug.org>

	* Makefile.am (bin_links): add mpost:metafun and mpost:mfplain
	since mpost no longer has mem files.

2011-02-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* scripts.lst (new): Lists of texmf and texmf-dist scripts.
	* Makefile.am: If necessary, create/update scripts.lst

2011-01-29  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_dist_perl_scripts): add sty2dtx.pl.
